调整目录结构

--- a/seajs/src/main/webapp/package.json
+++ b/seajs/src/main/webapp/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "base",
+  "name": "artifact",
   "version": "0.0.0",
-  "description": "base",
+  "description": "artifact",
   "keywords": [],
   "homepage": "",
   "author": "netbug_nb",
